# swagger.json
@@ -54,37 +54,40 @@
             "description": "tags of the recipe",
             "name": "tags",
             "in": "body",
-            "required": true,
-            "schema": {
-              "type": "array",
-              "items": {
-                "type": "string"
-              }
-            }
+            "required": true
           },
           {
             "description": "ingredients of the recipe",
             "name": "ingredients",
             "in": "body",
-            "required": true,
-            "schema": {
-              "type": "array",
-              "items": {
-                "type": "string"
-              }
-            }
+            "required": true
           },
           {
             "description": "instructions to make the recipe",
             "name": "instructions",
             "in": "body",
-            "required": true,
-            "schema": {
-              "type": "array",
-              "items": {
-                "type": "string"
-              }
-            }
+            "required": true
+          }
+        ]
+      }
+    },
+    "/recipes/:id": {
+      "get": {
+        "description": "Look for recipe with given id",
+        "produces": [
+          "application/json"
+        ],
+        "tags": [
+          "recipes"
+        ],
+        "operationId": "getOneRecipe",
+        "parameters": [
+          {
+            "type": "string",
+            "description": "path of the recipe",
+            "name": "id",
+            "in": "path",
+            "required": true
           }
         ]
       }
@@ -125,74 +128,33 @@
             "description": "ID of the recipe",
             "name": "id",
             "in": "path",
-            "required": true,
-            "schema": {
-              "type": "array",
-              "items": {
-                "type": "string"
-              }
-            }
+            "required": true
           },
           {
             "description": "name of the recipe",
             "name": "name",
             "in": "body",
-            "required": true,
-            "schema": {
-              "type": "array",
-              "items": {
-                "type": "string"
-              }
-            }
+            "required": true
           },
           {
             "description": "tags of the recipe",
             "name": "tags",
             "in": "body",
-            "required": true,
-            "schema": {
-              "type": "array",
-              "items": {
-                "type": "string"
-              }
-            }
+            "required": true
           },
           {
             "description": "ingredients of the recipe",
             "name": "ingredients",
             "in": "body",
-            "required": true,
-            "schema": {
-              "type": "array",
-              "items": {
-                "type": "string"
-              }
-            }
+            "required": true
           },
           {
             "description": "instructions to make the recipe",
             "name": "instructions",
             "in": "body",
-            "required": true,
-            "schema": {
-              "type": "array",
-              "items": {
-                "type": "string"
-              }
-            }
+            "required": true
           }
-        ],
-        "responses": {
-          "200": {
-            "description": "Successful operation"
-          },
-          "400": {
-            "description": "Invalid input"
-          },
-          "404": {
-            "description": "Invalid recipe ID"
-          }
-        }
+        ]
       },
       "delete": {
         "description": "Delete a recipe",
@@ -211,15 +173,7 @@
             "in": "path",
             "required": true
           }
-        ],
-        "responses": {
-          "200": {
-            "description": "Successful operation"
-          },
-          "404": {
-            "description": "Invalid recipe ID"
-          }
-        }
+        ]
       }
     }
   }
